iOS energy and memory profiling support (#400)
* iOS perf runner
---------

Co-authored-by: Millard <hodin@microsoft.com>